[package]
name = "atari-fork"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tree-search"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
