[package]
name = "atari-fork"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tree-search"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
libc = "0.2"
